--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
-<!doctype html>
-<head>
-<meta name="viewport" content="width = 1050, user-scalable = no" />
-<link rel="stylesheet" type="text/css" href="./css/basic.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-</head>
-<body>
+<html>
+	<head>
+	<meta name="viewport" content="width = 1050, user-scalable = no" />
+	<link rel="stylesheet" type="text/css" href="./css/basic.css">
+	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
+	</head>
+	<body>
 
-<audio controls class="audio" id="two">
-	<source src="audio/09.mp3" type="audio/mpeg">
-	Your browser does not support the audio tag.
-</audio>
-<audio controls class="audio" id="four">
+	<audio controls class="audio" id="two" autoplay="true">
+		<source src="audio/09.mp3" type="audio/mpeg">
+		Your browser does not support the audio tag.
+	</audio>
+	<audio controls class="audio" id="four" autoplay="true">
 		<source src="audio/02.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
-<div class="flipbook-viewport">
-	<div class="container">
+
 		<div id="flipbook">
-			<div style="background-image:url(pages/cover.png)">
+			<div style="background-image:url(pages/cover.png)" class="page">
 			</div>
 			<div style="background-image:url(pages/2.jpg)"></div>
 			<div style="background-image:url(pages/3.jpg)"></div>
 			<div style="background-image:url(pages/4.jpg)"></div>
 			<div style="background-image:url(pages/5.jpg)"></div>
-			<div style="background-image:url(pages/6.jpg)"></div>
-			<div style="background-image:url(pages/7.jpg)"></div>
-			<div style="background-image:url(pages/8.jpg)"></div>
-			<div style="background-image:url(pages/9.jpg)"></div>
-			<div style="background-image:url(pages/10.jpg)"></div>
-			<div style="background-image:url(pages/11.jpg)"></div>
-			<div style="background-image:url(pages/12.jpg)"></div>
 		</div>
+	<div id="slider-bar" class="turnjs-slider">
+		<div id="slider"></div>
 	</div>
-</div>
 
-<script type="text/javascript" src="./js/jquery.min.1.7.js"></script>
-<script type="text/javascript" src="./js/turn.js"></script>
-<script type="text/javascript" src="./js/basic.js"></script>
-</body>
+	<script type="text/javascript" src="./js/jquery.min.1.7.js"></script>
+	<script type="text/javascript" src="./js/turn.js"></script>
+	<script type="text/javascript" src="./js/basic.js"></script>
+	</body>
 </html>
