downgraded jquery addon due to license

--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
 	</head>
 	<body>
 
-	<audio controls class="audio" id="two" autoplay="true">
+	<!-- <audio controls class="audio" id="two" autoplay="true">
 		<source src="audio/09.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
 	<audio controls class="audio" id="four" autoplay="true">
 		<source src="audio/02.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
-	</audio>
+	</audio> -->
 
-		<div id="flipbook">
-			<div style="background-image:url(pages/cover.png)" class="page">
-			</div>
-			<div style="background-image:url(pages/2.jpg)"></div>
-			<div style="background-image:url(pages/3.jpg)"></div>
-			<div style="background-image:url(pages/4.jpg)"></div>
-			<div style="background-image:url(pages/5.jpg)"></div>
-		</div>
-	<div id="slider-bar" class="turnjs-slider">
-		<div id="slider"></div>
+	<div id="magazine">
+		<div style="background-image:url(pages/cover.png)"></div>
+		<div style="background-image:url(pages/1.png)"></div>
+		<div style="background-image:url(pages/2.png)"></div>
+		<div style="background-image:url(pages/3.png)"></div>
+		<div style="background-image:url(pages/4.png)"></div>
+		<div style="background-image:url(pages/5.jpg)"></div>
+		<div style="background-image:url(pages/6.jpg)"></div>
+		<div style="background-image:url(pages/7.png)"></div>
+		<div style="background-image:url(pages/8.png)"></div>
+		<div style="background-image:url(pages/9.jpg)"></div>
+		<div style="background-image:url(pages/10.jpg)"></div>
 	</div>
 
 	<script type="text/javascript" src="./js/jquery.min.1.7.js"></script>
