--- a/index.html
+++ b/index.html
@@ -2,23 +2,38 @@
 	<head>
 	<meta name="viewport" content="width = 1050, user-scalable = no" />
 	<link rel="stylesheet" type="text/css" href="./css/basic.css">
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
 	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
 	</head>
 	<body>
 
-	<!-- <audio controls class="audio" id="two" autoplay="true">
+	<audio controls class="audio" id="two" autoplay="true">
 		<source src="audio/09.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
 	<audio controls class="audio" id="four" autoplay="true">
 		<source src="audio/02.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
-	</audio> -->
+	</audio>
 
 	<div id="magazine">
 		<div style="background-image:url(pages/cover.png)"></div>
 		<div style="background-image:url(pages/1.png)"></div>
-		<div style="background-image:url(pages/2.png)"></div>
+		<div>
+			<div class="toc">
+				<h2 class="title">The Alchemist's Handbook</h2>
+				<h4>1. When the rain prevailed</h4>
+				<h4>2. Proud to be a God-Alchemy explained</h4>
+				<h4>3. Princess died last night</h4>
+				<h4>4. The Wind Doth Blow</h4>
+				<h4>5. These Are The New Dark Ages</h4>
+				<h4>6. This Body Craves</h4>
+				<h4>7. Wild Dog Howl</h4>
+				<h4>8. My Mom and the Sage </h4>
+				<h4>9. We Just Dance</h4>
+				<h4>10. Whisper Words</h4>
+			</div>
+		</div>
 		<div style="background-image:url(pages/3.png)"></div>
 		<div style="background-image:url(pages/4.png)"></div>
 		<div style="background-image:url(pages/5.jpg)"></div>
