table of contents links functional

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<div style="background-image:url(pages/cover.png)"></div>
 		<div style="background-image:url(pages/1.png)"></div>
 		<div>
-			<div class="toc">
-				<h2 class="title">The Alchemist's Handbook</h2>
+			<h2 class="title">The Alchemist's Handbook</h2>
+			<div id="toc">
 				<h4>1. When the rain prevailed</h4>
 				<h4>2. Proud to be a God-Alchemy explained</h4>
 				<h4>3. Princess died last night</h4>
