--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta name="viewport" content="width = 1050, user-scalable = no" />
 	<link rel="stylesheet" type="text/css" href="./css/basic.css">
 	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"> -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	</head>
 	<body>
 
@@ -15,6 +15,12 @@
 		<source src="audio/02.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
+
+	<div id="nav-menu">
+		<i class="fas fa-chevron-circle-left"></i>
+		<i class="fas fa-bars"></i>
+		<i class="fas fa-chevron-circle-right"></i>
+	</div>
 
 	<div id="magazine">
 		<div style="background-image:url(pages/cover.png)"></div>
