--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 		Your browser does not support the audio tag.
 	</audio>
 
+	<a class="dwn" href="https://store.cdbaby.com/cd/alchemistshandbookcom"><i class="fas fa-download"></i></a>
+
 	<div id="nav-menu">
-		<i class="fas fa-chevron-circle-left"></i>
-		<i class="fas fa-bars"></i>
-		<i class="fas fa-chevron-circle-right"></i>
+		<i class="nav fas fa-chevron-circle-left"></i>
+		<i class="nav fas fa-bars"></i>
+		<i class="nav fas fa-chevron-circle-right"></i>
 	</div>
 
 	<div id="magazine">
@@ -28,16 +30,16 @@
 		<div>
 			<h2 class="title">The Alchemist's Handbook</h2>
 			<div id="toc">
-				<h4>1. When the rain prevailed</h4>
-				<h4>2. Proud to be a God-Alchemy explained</h4>
-				<h4>3. Princess died last night</h4>
-				<h4>4. The Wind Doth Blow</h4>
-				<h4>5. These Are The New Dark Ages</h4>
-				<h4>6. This Body Craves</h4>
-				<h4>7. Wild Dog Howl</h4>
-				<h4>8. My Mom and the Sage </h4>
-				<h4>9. We Just Dance</h4>
-				<h4>10. Whisper Words</h4>
+					<h4 class="index">1. When the rain prevailed</h4>
+					<h4 class="index">2. Proud to be a God-Alchemy explained</h4>
+					<h4 class="index">3. Princess died last night</h4>
+					<h4 class="index">4. The Wind Doth Blow</h4>
+					<h4 class="index">5. These Are The New Dark Ages</h4>
+					<h4 class="index">6. This Body Craves</h4>
+					<h4 class="index">7. Wild Dog Howl</h4>
+					<h4 class="index">8. My Mom and the Sage </h4>
+					<h4 class="index">9. We Just Dance</h4>
+					<h4 class="index">10. Whisper Words</h4>
 			</div>
 		</div>
 		<div style="background-image:url(pages/3.png)"></div>
@@ -48,6 +50,24 @@
 		<div style="background-image:url(pages/8.png)"></div>
 		<div style="background-image:url(pages/9.jpg)"></div>
 		<div style="background-image:url(pages/10.jpg)"></div>
+		<div style="background-image:url(pages/11.png)"></div>
+		<div style="background-image:url(pages/12.png)"></div>
+		<div style="background-image:url(pages/13.jpg)"></div>
+		<div style="background-image:url(pages/14.jpg)"></div>
+		<div style="background-image:url(pages/15.png)"></div>
+		<div style="background-image:url(pages/16.png)"></div>
+		<div style="background-image:url(pages/17.jpg)"></div>
+		<div style="background-image:url(pages/18.jpg)"></div>
+		<div style="background-image:url(pages/19.png)"></div>
+		<div style="background-image:url(pages/20.png)"></div>
+		<div style="background-image:url(pages/21.jpg)"></div>
+		<div style="background-image:url(pages/22.jpg)"></div>
+		<div style="background-image:url(pages/23.png)"></div>
+		<div style="background-image:url(pages/24.png)"></div>
+		<div style="background-image:url(pages/25.jpg)"></div>
+		<div style="background-image:url(pages/26.jpg)"></div>
+		<div style="background-image:url(pages/27.png)"></div>
+		<div style="background-image:url(pages/28.png)"></div>
 	</div>
 
 	<script type="text/javascript" src="./js/jquery.min.1.7.js"></script>
