completed content additions

--- a/index.html
+++ b/index.html
@@ -4,17 +4,51 @@
 	<link rel="stylesheet" type="text/css" href="./css/basic.css">
 	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet">
 	</head>
 	<body>
 
-	<audio controls class="audio" id="two" autoplay="true">
-		<source src="audio/09.mp3" type="audio/mpeg">
+	<audio controls class="audio" id="one" autoplay="true">
+		<source src="audio/01.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
-	<audio controls class="audio" id="four" autoplay="true">
+	<audio controls class="audio" id="two" autoplay="true">
 		<source src="audio/02.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
+	<audio controls class="audio" id="three" autoplay="true">
+		<source src="audio/03.mp3" type="audio/mpeg">
+		Your browser does not support the audio tag.
+	</audio>
+	<audio controls class="audio" id="four" autoplay="true">
+		<source src="audio/04.mp3" type="audio/mpeg">
+		Your browser does not support the audio tag.
+	</audio>
+	<audio controls class="audio" id="five" autoplay="true">
+		<source src="audio/05.mp3" type="audio/mpeg">
+		Your browser does not support the audio tag.
+	</audio>
+	<audio controls class="audio" id="six" autoplay="true">
+		<source src="audio/06.mp3" type="audio/mpeg">
+		Your browser does not support the audio tag.
+	</audio>
+	<audio controls class="audio" id="seven" autoplay="true">
+		<source src="audio/07.mp3" type="audio/mpeg">
+		Your browser does not support the audio tag.
+	</audio>
+	<audio controls class="audio" id="eight" autoplay="true">
+		<source src="audio/09.mp3" type="audio/mpeg">
+		Your browser does not support the audio tag.
+	</audio>
+
+  <video id='my-video' class='video-js' controls preload='auto' width='900' height='600'
+  poster='./pages/poster.png' data-setup='{}'>
+    <source src='./pages/41.mp4' type='video/mp4'>
+    <p class='vjs-no-js'>
+			To view this video please enable JavaScript, and consider upgrading to a web browser that
+			supports this video
+    </p>
+  </video>
 
 	<a class="dwn" href="https://store.cdbaby.com/cd/alchemistshandbookcom"><i class="fas fa-download"></i></a>
 
@@ -25,7 +59,7 @@
 	</div>
 
 	<div id="magazine">
-		<div style="background-image:url(pages/cover.png)"></div>
+		<div style="background-image:url(pages/cover.png)" ></div>
 		<div style="background-image:url(pages/1.png)"></div>
 		<div>
 			<h2 class="title">The Alchemist's Handbook</h2>
@@ -68,9 +102,23 @@
 		<div style="background-image:url(pages/26.jpg)"></div>
 		<div style="background-image:url(pages/27.png)"></div>
 		<div style="background-image:url(pages/28.png)"></div>
+		<div style="background-image:url(pages/29.jpg)"></div>
+		<div style="background-image:url(pages/30.jpg)"></div>
+		<div style="background-image:url(pages/31.png)"></div>
+		<div style="background-image:url(pages/32.png)"></div>
+		<div style="background-image:url(pages/33.png)"></div>
+		<div style="background-image:url(pages/34.png)"></div>
+		<div style="background-image:url(pages/35.png)"></div>
+		<div style="background-image:url(pages/36.png)"></div>
+		<div style="background-image:url(pages/37.jpg)"></div>
+		<div style="background-image:url(pages/38.jpg)"></div>
+		<div style="background-image:url(pages/39.jpg)"></div>
+		<div style="background-image:url(pages/40.jpg)"></div>
+		<div></div>
 	</div>
 
 	<script type="text/javascript" src="./js/jquery.min.1.7.js"></script>
+	<script src='https://vjs.zencdn.net/7.5.4/video.js'></script>
 	<script type="text/javascript" src="./js/turn.js"></script>
 	<script type="text/javascript" src="./js/basic.js"></script>
 	</body>
