--- a/index.html
+++ b/index.html
@@ -8,38 +8,6 @@
 	</head>
 	<body>
 
-	<audio controls class="audio" id="one" autoplay="true">
-		<source src="audio/01.mp3" type="audio/mpeg">
-		Your browser does not support the audio tag.
-	</audio>
-	<audio controls class="audio" id="two" autoplay="true">
-		<source src="audio/02.mp3" type="audio/mpeg">
-		Your browser does not support the audio tag.
-	</audio>
-	<audio controls class="audio" id="three" autoplay="true">
-		<source src="audio/03.mp3" type="audio/mpeg">
-		Your browser does not support the audio tag.
-	</audio>
-	<audio controls class="audio" id="four" autoplay="true">
-		<source src="audio/04.mp3" type="audio/mpeg">
-		Your browser does not support the audio tag.
-	</audio>
-	<audio controls class="audio" id="five" autoplay="true">
-		<source src="audio/05.mp3" type="audio/mpeg">
-		Your browser does not support the audio tag.
-	</audio>
-	<audio controls class="audio" id="six" autoplay="true">
-		<source src="audio/06.mp3" type="audio/mpeg">
-		Your browser does not support the audio tag.
-	</audio>
-	<audio controls class="audio" id="seven" autoplay="true">
-		<source src="audio/07.mp3" type="audio/mpeg">
-		Your browser does not support the audio tag.
-	</audio>
-	<audio controls class="audio" id="eight" autoplay="true">
-		<source src="audio/09.mp3" type="audio/mpeg">
-		Your browser does not support the audio tag.
-	</audio>
 
   <video id='my-video' class='video-js' controls preload='auto' width='900' height='600'
   poster='./pages/poster.png' data-setup='{}'>
@@ -50,7 +18,42 @@
     </p>
   </video>
 
-	<a class="dwn" href="https://store.cdbaby.com/cd/alchemistshandbookcom"><i class="fas fa-download"></i></a>
+	<div class="dwn-container">
+		<img id="album-img" src="./images/album.jpg" alt="album cover" width="200" height="200">
+		<audio controls class="audio" id="one" autoplay="true">
+			<source src="audio/01.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<audio controls class="audio" id="two" autoplay="true">
+			<source src="audio/02.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<audio controls class="audio" id="three" autoplay="true">
+			<source src="audio/03.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<audio controls class="audio" id="four" autoplay="true">
+			<source src="audio/04.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<audio controls class="audio" id="five" autoplay="true">
+			<source src="audio/05.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<audio controls class="audio" id="six" autoplay="true">
+			<source src="audio/06.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<audio controls class="audio" id="seven" autoplay="true">
+			<source src="audio/07.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<audio controls class="audio" id="eight" autoplay="true">
+			<source src="audio/09.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<a class="btn" target="_blank" href="https://store.cdbaby.com/cd/alchemistshandbookcom">Buy Now</a>
+	</div>
 
 	<div id="nav-menu">
 		<i class="nav fas fa-chevron-circle-left"></i>
