--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
 		<i class="nav fas fa-chevron-circle-right"></i>
 	</div>
 
+	<div id="nav-quote">
+		<span>And if there come the singers and the dancers and the flute players,—buy of their gifts also.
+			For they too are gatherers of fruit and frankincense, and that which they bring, though fashioned of dreams, is raiment and food for your soul.
+			<br>
+			- “The Prophet” Kahlil Gibran 
+		</span>
+	</div>
+
 	<div id="magazine">
 		<div style="background-image:url(pages/cover.png)" ></div>
 		<div style="background-image:url(pages/1.png)"></div>
