--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <html>
-	<head>
+
+<head>
 	<meta name="viewport" content="width = 1050, user-scalable = no" />
 	<link rel="stylesheet" type="text/css" href="./css/basic.css">
 	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet">
-	</head>
-	<body>
+</head>
+
+<body>
 
 
-  <video id='my-video' class='video-js' controls preload='auto' width='900' height='600'
-  poster='./pages/poster.png' data-setup='{}'>
-    <source src='./pages/41.mp4' type='video/mp4'>
-    <p class='vjs-no-js'>
+	<video id='my-video' class='video-js' controls preload='auto' width='900' height='600' poster='./pages/poster.png'
+		data-setup='{}'>
+		<source src='./pages/41.mp4' type='video/mp4'>
+		<p class='vjs-no-js'>
 			To view this video please enable JavaScript, and consider upgrading to a web browser that
 			supports this video
-    </p>
-  </video>
+		</p>
+	</video>
 
 	<div class="dwn-container">
 		<img id="album-img" src="./images/album.jpg" alt="album cover" width="200" height="200">
@@ -63,28 +66,29 @@
 
 	<div id="nav-quote">
 		<span>And if there come the singers and the dancers and the flute players,—buy of their gifts also.
-			For they too are gatherers of fruit and frankincense, and that which they bring, though fashioned of dreams, is raiment and food for your soul.
+			For they too are gatherers of fruit and frankincense, and that which they bring, though fashioned of dreams, is
+			raiment and food for your soul.
 			<br>
-			- “The Prophet” Kahlil Gibran 
+			- “The Prophet” Kahlil Gibran
 		</span>
 	</div>
 
 	<div id="magazine">
-		<div style="background-image:url(pages/cover.png)" ></div>
+		<div style="background-image:url(pages/cover.png)"></div>
 		<div style="background-image:url(pages/1.png)"></div>
 		<div>
 			<h2 class="title">The Alchemist's Handbook</h2>
 			<div id="toc">
-					<h4 class="index">1. When the rain prevailed</h4>
-					<h4 class="index">2. Proud to be a God-Alchemy explained</h4>
-					<h4 class="index">3. Princess died last night</h4>
-					<h4 class="index">4. The Wind Doth Blow</h4>
-					<h4 class="index">5. These Are The New Dark Ages</h4>
-					<h4 class="index">6. This Body Craves</h4>
-					<h4 class="index">7. Wild Dog Howl</h4>
-					<h4 class="index">8. My Mom and the Sage </h4>
-					<h4 class="index">9. We Just Dance</h4>
-					<h4 class="index">10. Whisper Words</h4>
+				<h4 class="index">1. When the rain prevailed</h4>
+				<h4 class="index">2. Proud to be a God-Alchemy explained</h4>
+				<h4 class="index">3. Princess died last night</h4>
+				<h4 class="index">4. The Wind Doth Blow</h4>
+				<h4 class="index">5. These Are The New Dark Ages</h4>
+				<h4 class="index">6. This Body Craves</h4>
+				<h4 class="index">7. Wild Dog Howl</h4>
+				<h4 class="index">8. My Mom and the Sage </h4>
+				<h4 class="index">9. We Just Dance</h4>
+				<h4 class="index">10. Whisper Words</h4>
 			</div>
 		</div>
 		<div style="background-image:url(pages/3.png)"></div>
@@ -132,5 +136,6 @@
 	<script src='https://vjs.zencdn.net/7.5.4/video.js'></script>
 	<script type="text/javascript" src="./js/turn.js"></script>
 	<script type="text/javascript" src="./js/basic.js"></script>
-	</body>
+</body>
+
 </html>
